--- a/marklogic-data-hub-central/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
+++ b/marklogic-data-hub-central/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
@@ -144,6 +144,16 @@ hr {
     margin-left: -1.5em;
     margin-right: -1.5em;
 }
+
+.btn_test {
+    &:disabled {
+        &:hover {
+            background-color: #f5f5f5;
+            border-color: #d9d9d9;
+        }
+    }
+}
+
 .entityTable {
     & thead > tr > th {
         background-color: #fafafa;
