DHFPROD-7397: Make it clear custom hooks are deprecated in Hub Central

--- a/marklogic-data-hub-central/ui/src/components/advanced-settings/advanced-settings.module.scss
+++ b/marklogic-data-hub-central/ui/src/components/advanced-settings/advanced-settings.module.scss
@@ -175,3 +175,12 @@ span.readOnlyLabel {
 .alertMessage {
     font-weight: bold;
 }
+
+.deprecatedLabel {
+    font-size: 9px;
+    color: #B32424;
+    border: 1px solid #B32424;
+    border-radius: 4px;
+    margin-left: 0.5vw;
+    padding: 3px;
+}
