DHFPROD-7427: Add Help info to entity table title in mapping

--- a/marklogic-data-hub-central/ui/src/components/entities/mapping/entity-map-table/entity-map-table.module.scss
+++ b/marklogic-data-hub-central/ui/src/components/entities/mapping/entity-map-table/entity-map-table.module.scss
@@ -135,7 +135,7 @@
   align-items: flex-start;
 }
 
-.mapExpressionContainer > span > i, 
+.mapExpressionContainer > span > i,
 .mapExpressionContainer > span > button {
   display: inline-block;
   cursor: pointer;
@@ -253,6 +253,7 @@
 .arrayImage {
   margin-left: 5px;
   margin-bottom: 1px;
+  cursor: pointer;
 }
 
 .rowLink  {
